HVAC Backup 2/objects/Work_Step_Input_Validation__mdt.object
<CustomObject>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Work Step Input Validation</label>
    <pluralLabel>Work Step Input Validations</pluralLabel>
</CustomObject>